@@ -2848,6 +2848,19 @@
       <range>LOS</range>
       <type>P</type>
     </spell>
+	<spell>
+      <id>4b214e1a-4800-4787-b5fe-55672b359dec</id>
+      <name>Convince</name>
+      <page>132</page>
+      <source>SGG</source>
+      <category>Manipulation</category>
+      <damage>0</damage>
+      <descriptor />
+      <duration>S</duration>
+      <dv>F-2</dv>
+      <range>LOS</range>
+      <type>P</type>
+    </spell>
     <spell>
       <id>ae2bddcc-9899-4549-b0ff-1dc7c1bb291a</id>
       <name>Aspect Mana Line</name>
